- Add SaveToFolder Function - Add Generator Helper - Add WSO API Helper

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
-        "laravel/lumen-framework": "^8.0"
+        "laravel/lumen-framework": "^8.0",
+        "ramsey/uuid": "^4.2",
+        "symfony/yaml": "5.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
